workspaces/frontend/config/manifests/kustomize/options/istio-authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: frontend
spec:
  action: ALLOW
  selector:
    matchLabels:
        app.kubernetes.io/component: workspace-frontend
  rules:
  - {}
